--- a/src/main/resources/templates/admin/layout/adminlayout.html
+++ b/src/main/resources/templates/admin/layout/adminlayout.html
@@ -2,7 +2,8 @@
 <html lagn="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-  <link rel="stylesheet" th:href="@{/css/admin/include/admin_common.css}" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/css/admin/include/admin_common.css}" />
   <link rel="stylesheet" th:href="@{/css/admin/include/admin_header.css}" />
   <link rel="stylesheet" th:href="@{/css/admin/include/admin_footer.css}" />
   <link rel="stylesheet" th:href="@{/css/admin/include/admin_sidebar.css}" />
