--- a/src/main/resources/static/css/admin/include/admin_common.css
+++ b/src/main/resources/static/css/admin/include/admin_common.css
@@ -16,6 +16,7 @@ input, textarea {
     margin: 0;
     padding: 0;
     font: normal 12px "noto sans korean";
+    font-family: 'Noto Sans KR', 'Malgun Gothic', Arial, sans-serif;
 }
 
 body {
