--- a/src/main/resources/static/css/include/reset.css
+++ b/src/main/resources/static/css/include/reset.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-
+  font-family: 'Noto Sans KR', 'Malgun Gothic', Arial, sans-serif;
   }
   
   body {
@@ -32,6 +32,7 @@
   a {
     text-decoration: none;
     color: inherit;
+    font-family: 'Noto Sans KR', 'Malgun Gothic', Arial, sans-serif;
   }
 
 /* 기본 버튼 스타일 */
