--- a/src/main/resources/templates/main/layout/main_layout.html
+++ b/src/main/resources/templates/main/layout/main_layout.html
@@ -10,11 +10,14 @@
 <head>
     <meta charset="UTF-8">
     <title>main</title>
-    <link rel="stylesheet" th:href="@{/css/include/reset.css}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/css/includes/reset.css}"/>
     <link rel="stylesheet" th:href="@{/css/main/main.css}"/>
     <link rel="stylesheet" th:href="@{/css/include/layout.css}"/>
     <link rel="stylesheet" th:href="@{/css/banner/banner.css}"/>
     <link rel="icon" type="image/png" sizes="16x16" th:href="@{'/'+${appInfo.uploadDir}+'logo/'+${config.favicon}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 <!-- main banner -->
