--- a/src/main/resources/templates/product/layout/product_layout.html
+++ b/src/main/resources/templates/product/layout/product_layout.html
@@ -4,6 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/include/reset.css}"/>
     <link rel="stylesheet" th:href="@{/css/product/product.css}"/>
     <link rel="stylesheet" th:href="@{/css/include/layout.css}"/>
