--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -91,7 +91,7 @@
     <div class="paging" th:if="${productsPage.totalPages > 0}">
     <span class="prev" th:if="${!productsPage.isFirst}">
         <a th:href="@{/product/list(categoryId=${categoryId},page=${productsPage.currentPage - 1}, size=${productsPage.pageSize})}">
-            <&nbsp;이전
+            <&nbsp;
         </a>
     </span>
         <span class="paging__num" th:each="i : ${#numbers.sequence(1, productsPage.totalPages)}">
@@ -100,7 +100,7 @@
     </span>
         <span class="next" th:if="${!productsPage.isLast}">
         <a th:href="@{/product/list(categoryId=${categoryId},page=${productsPage.currentPage + 1}, size=${productsPage.pageSize})}">
-            다음&nbsp;>
+            &nbsp;>
         </a>
     </span>
     </div>
