--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -90,16 +90,16 @@
     <!-- 상품목록 페이지번호 -->
     <div class="paging" th:if="${productsPage.totalPages > 0}">
     <span class="prev" th:if="${!productsPage.isFirst}">
-        <a th:href="@{/product/list(keyword=${keyword}, categoryId=${categoryId},page=${productsPage.currentPage - 1}, size=${productsPage.pageSize})}">
+        <a th:onclick="|page(${productsPage.currentPage - 1})|">
             <&nbsp;이전
         </a>
     </span>
         <span class="paging__num" th:each="i : ${#numbers.sequence(1, productsPage.totalPages)}">
-        <a th:href="@{/product/list(keyword=${keyword},categoryId=${categoryId},page=${i - 1}, size=${productsPage.pageSize})}"
+        <a th:onclick="|page(${i - 1})|"
            th:text="${i}">1</a>
     </span>
         <span class="next" th:if="${!productsPage.isLast}">
-        <a th:href="@{/product/list(keyword=${keyword},categoryId=${categoryId},page=${productsPage.currentPage + 1}, size=${productsPage.pageSize})}">
+        <a th:onclick="|page(${productsPage.currentPage + 1})|">
             다음&nbsp;>
         </a>
     </span>
