admin order delivery complete

--- a/src/main/resources/templates/admin/order/list.html
+++ b/src/main/resources/templates/admin/order/list.html
@@ -6,7 +6,7 @@
 
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-    <link rel="stylesheet" th:href="@{/css/admin/config/banner.css}"/>
+    <link rel="stylesheet" th:href="@{/css/admin/order/list.css}"/>
     <link rel="stylesheet" th:href="@{/css/my/modal.css}"/>
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
@@ -19,6 +19,7 @@
     <div th:replace="admin/include/admin_modal :: #orderinfomodal"></div>
     <div th:replace="admin/include/admin_modal :: #adressinputmodal"></div>
     <div th:replace="admin/include/admin_modal :: #deliveryInsertModal"></div>
+    <div th:replace="admin/include/admin_modal :: #deliveryInfoModal"></div>
     <div class="dashboard">
         <div class="content_header">
             <h1>주문현황</h1>
