--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -598,78 +598,6 @@
             </section>
         </div>
     </div>
-    <!-- 배송상세 모달-->
-    <div id="deliverinfomodal" class="modal admin">
-        <div class="deliverinfomodal-content modalcontent">
-            <nav class="adminmodal-nav">
-                <h1>배송상세</h1><h4>101220134</h4>
-                <button class="adminmodal-close" id="closeModal">&times;</button>
-            </nav>
-            <section class="modal-section">
-                <article>
-                    <h3>상품정보</h3>
-                    <table border="0" class="widthtable">
-                        <tr>
-                            <th></th>
-                            <th>상품번호</th>
-                            <th>상품명</th>
-                            <th>판매자</th>
-                            <th>가격</th>
-                            <th>수량</th>
-                            <th>배송비</th>
-                            <th>결제금액</th>
-                        </tr>
-                        <tr>
-                            <td><img class="modalimgsize" src="/static/images/AA.jpg" alt="img" /></td>
-                            <td>120120021</td>
-                            <td>OOO</td>
-                            <td>(주)상호명</td>
-                            <td>24,000</td>
-                            <td>3</td>
-                            <td>0</td>
-                            <td>68,400</td>
-                        </tr>
-                    </table>
-                </article>
-                </table>
-                <!-- 배송정보 -->
-                <article>
-                    <h1>배송정보</h1>
-                    <table border="0" class="heighttable">
-                        <tr>
-                            <th>주문번호</th>
-                            <td>11111</td>
-                        </tr>
-                        <tr>
-                            <th>수령인</th>
-                            <td>김유신</td>
-                        </tr>
-                        <tr>
-                            <th>연락처</th>
-                            <td>010-1111-2222</td>
-                        </tr>
-                        <tr>
-                            <th>배송지 주소</th>
-                            <td>부산진구</td>
-                        </tr>
-                        <tr>
-                            <th>택배사</th>
-                            <td>로젠택배</td>
-                        </tr>
-                        <tr>
-                            <th>송장번호</th>
-                            <td>1012202315</td>
-                        </tr>
-                        <tr>
-                            <th>기타</th>
-                            <td>감사합니다. 수고하세요</td>
-                        </tr>
-                    </table>
-                </article>
-
-            </section>
-        </div>
-    </div>
 
     <!-- 쿠폰정보 모달 -->
     <div id="couponinfomodal" class="modal admin" style="display:none;">
@@ -944,32 +872,96 @@
             </nav>
             <section class="modal-section">
                 <h3>주문 리스트</h3>
-
-                <!-- 배송지 카드 -->
-                <div class="delivery-card">
-                    <div class="delivery-card-header">
-                        <div class="delivery-title">
-                            <strong>쿠폰 이름</strong>
-                        </div>
-                        <div class="action-buttons">
-                            <button>
-                                다운받기
-                            </button>
-                        </div>
-                    </div>
-                    <div class="delivery-info">
-                        <span>할인 내용</span><br>
-                        <span>다운 가능 날짜: </span>
-                        <span></span><br>
-                        <span>발급후 사용 가능 기간: </span>
-                        <span>10일</span>
-                    </div>
-                </div>
-                <!-- 새로운 배송지 등록 버튼 -->
-                <button class="save-button" type="button">전체 다운받기</button>
+                <!-- 주문아이템 리스트 스크립트에서 동적 생성 ! -->
             </section>
         </div>
     </div>
+    <!-- 배송등록상세 모달-->
+    <div id="deliveryInfoModal" class="modal admin">
+        <div class="deliverinfomodal-content modalcontent">
+            <nav class="adminmodal-nav">
+                <h1>배송상세</h1>
+                <button class="adminmodal-close" id="closeModal">&times;</button>
+            </nav>
+            <section class="modal-section">
+                <!-- 배송 상세 정보는 JavaScript에서 동적으로 추가됩니다 -->
+            </section>
+        </div>
+    </div>
+
+    <!-- 배송상세 모달 -->
+    <div id="deliverydetailmodal" class="modal admin">
+        <div class="deliverinfomodal-content modalcontent">
+            <nav class="adminmodal-nav">
+                <h1>배송상세</h1><h4 id="order-number">주문번호</h4> <!-- 주문번호를 동적으로 설정 -->
+                <button class="adminmodal-close" id="closeModal">&times;</button>
+            </nav>
+            <section class="modal-section">
+                <!-- 상품정보 -->
+                <article>
+                    <h3>상품정보</h3>
+                    <table border="0" class="widthtable">
+                        <tr>
+                            <th>상품이미지</th>
+                            <th>상품번호</th>
+                            <th>상품명</th>
+                            <th>판매자</th>
+                            <th>가격</th>
+                            <th>수량</th>
+                            <th>배송비</th>
+                            <th>결제금액</th>
+                        </tr>
+                        <tr>
+                            <td><img class="modalimgsize" id="product-image" src="" alt="상품 이미지" /></td>
+                            <td id="product-id"></td>
+                            <td id="product-name"></td>
+                            <td id="seller-name"></td>
+                            <td id="price"></td>
+                            <td id="quantity"></td>
+                            <td id="delivery-fee"></td>
+                            <td id="total-price"></td>
+                        </tr>
+                    </table>
+                </article>
+
+                <!-- 배송정보 -->
+                <article>
+                    <h1>배송정보</h1>
+                    <table border="0" class="heighttable">
+                        <tr>
+                            <th>주문번호</th>
+                            <td id="order-id"></td>
+                        </tr>
+                        <tr>
+                            <th>수령인</th>
+                            <td id="recipient-name"></td>
+                        </tr>
+                        <tr>
+                            <th>연락처</th>
+                            <td id="recipient-phone"></td>
+                        </tr>
+                        <tr>
+                            <th>배송지 주소</th>
+                            <td id="recipient-address"></td>
+                        </tr>
+                        <tr>
+                            <th>택배사</th>
+                            <td id="delivery-company"></td>
+                        </tr>
+                        <tr>
+                            <th>송장번호</th>
+                            <td id="invoice-number"></td>
+                        </tr>
+                        <tr>
+                            <th>기타</th>
+                            <td id="additional-memo"></td>
+                        </tr>
+                    </table>
+                </article>
+            </section>
+        </div>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // 모달과 버튼을 객체로 관리
