관리자 포인트

--- a/src/main/resources/templates/admin/member/point.html
+++ b/src/main/resources/templates/admin/member/point.html
@@ -79,7 +79,7 @@
 
             </table>
 
-            <button class="btn" onclick="deleteSelectedMembers()">
+            <button class="btn" onclick="deleteSelectedPoints()">
                 <i class="fa-solid fa-trash"></i> 선택삭제
             </button>
 
